--- a/index.html
+++ b/index.html
@@ -15,6 +15,16 @@
     <!-- Axios -->
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-NE8QH6RTWG"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-NE8QH6RTWG');
+</script>
+
     <style>
         * {
             box-sizing: border-box;
@@ -203,3 +213,4 @@
 
 </body>
 </html>
+
