--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                     });
 
                     if (Res.data.succeed) {
-                        SetPass(Res.data.Password);
+                        SetPass(Res.data.password);
                     } else {
                         alert("Generator failed");
                     }
@@ -213,4 +213,5 @@
 
 </body>
 </html>
+
 
